--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Gllasy Shop</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="body-slide-1 inner-page">
     <h1 class="visually-hidden">Каталог магазина мороженного "Глейси"</h1>
@@ -33,7 +33,7 @@
           </ul>
           <a href="#" class="header-button search">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
-              <g id="Layer_2">
+              <g>
                 <path d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2S11,4.019,11,6.5S8.981,11,6.5,11z"/>
               </g>
             </svg>
@@ -45,8 +45,8 @@
               <input type="search" id="search-line" placeholder="Крем-брюле">
             </form>
           </div>
-          <a href="#" type="button" class="header-button login">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="19px" viewBox="0 0 21 19" enable-background="new 0 0 21 19" xml:space="preserve">
+          <a href="#" class="header-button login">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="19px" viewBox="0 0 21 19" enable-background="new 0 0 21 19" xml:space="preserve">
               <g>
                 <polygon points="6,14.875 12.917,9.5 6,4.125 6,7.042 -0.042,7.042 -0.042,11.959 6,11.959"/>
                 <path d="M18,0H5C3.9,0,3,0.9,3,2v2h2V2h13v15H5v-2H3v2c0,1.1,0.9,2,2,2h13c1.1,0,2-0.9,2-2V2C20,0.9,19.1,0,18,0z"/>
@@ -65,7 +65,7 @@
               <a href="#">Новая регистрация</a>
             </form>
           </div>
-          <a href="#" type="button" class="header-button basket full-basket">
+          <a href="#" class="header-button basket full-basket">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="20px" viewBox="0 0 21 20" enable-background="new 0 0 21 20" xml:space="preserve">
               <polygon fill="#E84D37" points="5.888,4.031 6.922,13 17.372,13 18.548,4.031 "/>
               <circle fill="#343434" cx="6.984" cy="18" r="2"/>
@@ -77,6 +77,7 @@
           <div class="header-basket">
             <div class="header-basket-wrapper">
               <article class="basket-item">
+                <h2 class="visually-hidden">Товар в вашей корзине</h2>
                 <button type="button"><span class="visually-hidden">Удалить товар из корзины</span></button>
                 <img src="img/item-1.png" width="33" height="33" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
                 <p class="basket-item-title">Пломбир с апельсиновым джемом</p>
@@ -84,6 +85,7 @@
                 <p class="basket-item-price">300 руб.</p>
               </article>
               <article class="basket-item">
+                <h2 class="visually-hidden">Товар в вашей корзине</h2>
                 <button type="button"><span class="visually-hidden">Удалить товар из корзины</span></button>
                 <img src="img/item-3.png" width="33" height="33" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
                 <p class="basket-item-title">Пломбир с апельсиновым джемом</p>
@@ -111,13 +113,15 @@
           <div class="fieldset-wrap">
             <div class="sort-wrap">
               <p class="legend">Сортировка</p>
-              <label for="sort-direction" class="visually-hidden">Сортировка</label>
-              <select class="sort-direction filter-box" id="sort-direction">
-                <option value="by-popular">по популярности</option>
-                <option value="price-up">сначала недорогие</option>
-                <option value="price-down">сначала дорогие</option>
-                <option value="by-fat">по жирности</option>
-              </select>
+              <div class="fiter-box select-wrap">
+                <label for="sort-direction" class="visually-hidden">Сортировка</label>
+                <select class="sort-direction" id="sort-direction">
+                  <option value="by-popular">по популярности</option>
+                  <option value="price-up">сначала недорогие</option>
+                  <option value="price-down">сначала дорогие</option>
+                  <option value="by-fat">по жирности</option>
+                </select>
+              </div>
             </div>
             <div class="price-wrap">
               <p class="legend">Цена: 100 руб. - 500 руб.</p>
@@ -307,10 +311,10 @@
 
     <footer class="footer">
       <ul class="social-links">
-        <li><a href="#" class="twitter" aria-lable="twitter" target="_blank"></a></li>
-        <li><a href="#" class="instagram" aria-lable="instagram" target="_blank"></a></li>
-        <li><a href="#" class="facebook" aria-lable="facebook" target="_blank"></a></li>
-        <li><a href="#" class="vkontakte" aria-lable="vkontakte" target="_blank"></a></li>
+        <li><a href="#" class="twitter" target="_blank"><span class="visually-hidden">twitter</span></a></li>
+        <li><a href="#" class="instagram" target="_blank"><span class="visually-hidden">instagram</span></a></li>
+        <li><a href="#" class="facebook" target="_blank"><span class="visually-hidden">facebook</span></a></li>
+        <li><a href="#" class="vkontakte" target="_blank"><span class="visually-hidden">vkontakte</span></a></li>
       </ul>
       <div class="footer-navigation">
         <ul class="footer-info">
