--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Gllasy Shop</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="body-slide-1">
   <h1 class="visually-hidden">Магазин мороженного "Глейси"</h1>
@@ -42,7 +42,7 @@
         <div class="header-search">
           <form class="header-search-form" action="index.html" method="post">
             <label for="search-line" class="visually-hidden">Поиск</label>
-            <input type="search" id="search-line" placeholder="Крем-брюле">
+            <input type="search" class="placeholder" id="search-line" placeholder="Крем-брюле">
           </form>
         </div>
         <a href="#" class="header-button login">
@@ -57,9 +57,9 @@
         <div class="header-login">
           <form class="header-login-form" action="index.html" method="post">
             <label for="login-email" class="visually-hidden">Введите свой электронный адрес</label>
-            <input type="email" id="login-email" placeholder="email@example.com">
+            <input type="email" class="placeholder" id="login-email" placeholder="email@example.com">
             <label for="password">Ваш пароль</label>
-            <input type="password" id="password" value="password">
+            <input type="password" class="placeholder" id="password" value="password">
             <button type="submit" class="content-button">Войти</button>
             <a href="#">Забыли пароль?</a>
             <a href="#">Новая регистрация</a>
@@ -180,7 +180,7 @@
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <form class="subscription-form" action="index.html" method="post">
             <label class="visually-hidden" for="user-email">Ваш электронный адрес</label>
-            <input type="email" id="user-email" name="user-email" placeholder="email@example.com">
+            <input type="email" class="placeholder" id="user-email" name="user-email" placeholder="email@example.com">
             <button type="submit" class="content-button">Отправить</button>
           </form>
         </div>
@@ -232,10 +232,10 @@
       <h3>Мы обязательно вам ответим!</h3>
       <form class="feedback-form" action="echo/htmlacademy.ru" method="post">
         <label class="visually-hidden" for="user-name">Ваше имя и фамилия</label>
-        <input type="text" id="user-name" name="user-name" placeholder="Имя Фамилия" aria-label="введите имя и фамилию">
+        <input type="text" class="placeholder" id="user-name" name="user-name" placeholder="Имя Фамилия" aria-label="введите имя и фамилию">
         <label class="visually-hidden" for="feedback-email">Ваш электронный адрес для подписки</label>
-        <input type="email" id="feedback-email" name="feedback-email" placeholder="email@example.com" aria-label="введите ваш электронный адрес">
-        <textarea name="user-message" rows="8" cols="80" placeholder="В свободной форме" aria-label="введите ваше сообщение"></textarea>
+        <input type="email" class="placeholder" id="feedback-email" name="feedback-email" placeholder="email@example.com" aria-label="введите ваш электронный адрес">
+        <textarea name="user-message" class="placeholder" rows="8" cols="80" placeholder="В свободной форме" aria-label="введите ваше сообщение"></textarea>
         <button type="submit" class="content-button">Отправить</button>
       </form>
     </section>
