--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Gllasy Shop</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="body-slide-1 inner-page">
     <h1 class="visually-hidden">Каталог магазина мороженного "Глейси"</h1>
@@ -42,7 +42,7 @@
           <div class="header-search">
             <form class="header-search-form" action="index.html" method="post">
               <label for="search-line" class="visually-hidden">Поиск</label>
-              <input type="search" id="search-line" placeholder="Крем-брюле">
+              <input type="search" class="placeholder" id="search-line" placeholder="Крем-брюле">
             </form>
           </div>
           <a href="#" class="header-button login">
@@ -57,9 +57,9 @@
           <div class="header-login">
             <form class="header-login-form" action="index.html" method="post">
               <label for="login-email" class="visually-hidden">Введите свой электронный адрес</label>
-              <input type="email" id="login-email" placeholder="email@example.com">
+              <input type="email" class="placeholder" id="login-email" placeholder="email@example.com">
               <label for="password">Ваш пароль</label>
-              <input type="password" id="password" value="password">
+              <input type="password" class="placeholder" id="password" value="password">
               <button type="submit" class="content-button">Войти</button>
               <a href="#">Забыли пароль?</a>
               <a href="#">Новая регистрация</a>
