Правки при защите
Правеки после проверки случайным наставником

--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,15 @@
               </div>
             </div>
             <div class="price-wrap">
-              <p class="legend">Цена: 100 руб. - 500 руб.</p>
+              <p class="legend">
+                Цена:
+                <label for="price-min" class="visually-hidden">Цена от</label>
+                <input type="text" class="price-min" id="price-min" value="100" readonly>
+                 руб. -
+                <label for="price-max" class="visually-hidden">Цена до</label>
+                <input type="text" class="price-max" id="price-max" value="500" readonly>
+                 руб.
+              </p>
               <label for="price" class="visually-hidden">Стоимость</label>
               <input type="range" class="visually-hidden" name="price" id="price" value="0" min="0" max="5000">
               <div class="range-box filter-box">
@@ -193,7 +201,7 @@
             <h3>Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</h3>
           </a>
           <span class="price">310 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -202,7 +210,7 @@
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
           </a>
           <span class="price">380 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
+          <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -211,7 +219,7 @@
             <h3>Сливочно-клубничное с<br> присыпкой из белого шоколада</h3>
           </a>
           <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
+          <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -220,7 +228,7 @@
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           </a>
           <span class="price">415 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
+          <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -229,7 +237,7 @@
             <h3>Сливочное с брусничным<br> джемом</h3>
           </a>
           <span class="price">325 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-5.png" width="267" height="267" alt="Сливочное мороженное с брусничным джемом">
+          <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное мороженное с брусничным джемом">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -238,7 +246,7 @@
             <h3>Сливочно-черничное с цельными ягодами черники </h3>
           </a>
           <span class="price">410 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-6.png" width="267" height="267" alt="Сливочно-черничное мороженное с цельными ягодами черники">
+          <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное мороженное с цельными ягодами черники">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -247,7 +255,7 @@
             <h3>Сливочно-лимонное с<br> карамельной присыпкой</h3>
           </a>
           <span class="price">375 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-7.png" width="267" height="267" alt="Сливочно-лимонное мороженное с карамельной присыпкой">
+          <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное мороженное с карамельной присыпкой">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -256,7 +264,7 @@
             <h3>Сливочное с шоколадной<br> стружкой</h3>
           </a>
           <span class="price">320 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-8.png" width="267" height="267" alt="Сливочное мороженное с шоколадной стружкой">
+          <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное мороженное с шоколадной стружкой">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -265,7 +273,7 @@
             <h3>Сливочно-ванильное с<br> кусочками шоколада</h3>
           </a>
           <span class="price">440 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-9.png" width="267" height="267" alt="Сливочно-ванильное мороженное с кусочками шоколада">
+          <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное мороженное с кусочками шоколада">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -274,7 +282,7 @@
             <h3>Сливочноe с ментоловым<br> сиропом</h3>
           </a>
           <span class="price">435 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-10.png" width="267" height="267" alt="Сливочное мороженное с ментоловым сиропом">
+          <img src="img/item-10.jpg" width="267" height="267" alt="Сливочное мороженное с ментоловым сиропом">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -283,7 +291,7 @@
             <h3>Сливочное с кусочками черного шоколада</h3>
           </a>
           <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-11.png" width="267" height="267" alt="Сливочное мороженное с кусочками черного шоколада">
+          <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное мороженное с кусочками черного шоколада">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
 
@@ -292,7 +300,7 @@
             <h3>Сливочное с мятным сиропом</h3>
           </a>
           <span class="price">420 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-          <img src="img/item-12.png" width="267" height="267" alt="Сливочное мороженное с мятным сиропом">
+          <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное мороженное с мятным сиропом">
           <a href="#" class="content-button item-link">Быстрый просмотр</a>
         </article>
       </section>
