--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h3>Сливочное с апельсиновым<br> джемом и цитрусовой стружкой</h3>
         </a>
         <span class="price">310 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/item-1.png" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
+        <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное мороженное с апельсиновым джемом и цитрусовой стружкой">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -139,7 +139,7 @@
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
         </a>
         <span class="price">380 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/item-2.png" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
+        <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное мороженное с кусочками шоколада">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -148,7 +148,7 @@
           <h3>Сливочно-клубничное с<br> присыпкой из белого шоколада</h3>
         </a>
         <span class="price">355 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/item-3.png" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
+        <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное мороженное с присыпкой из белого шоколада">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
 
@@ -157,7 +157,7 @@
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
         </a>
         <span class="price">415 <span class="price-currency">₽<span class="price-weight">/кг</span></span></span>
-        <img src="img/item-4.png" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
+        <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное мороженное крем-брюле с карамельной подливкой">
         <a href="#" class="content-button item-link">Быстрый просмотр</a>
       </article>
     </section>
@@ -199,7 +199,7 @@
           <a href="tel:+88124502525">8 812 450-25-25</a>
           (с 10 до 20 ежедневно)
         </p>
-        <button type="button" class="content-button feedback-button">Форма обратной связи</button>
+        <a href="#" class="content-button feedback-button">Форма обратной связи</a>
       </div>
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533216!2d30.320858716342318!3d59.93871648187625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2spl!4v1583690243054!5m2!1sru!2spl" height="430" style="border:0;" allowfullscreen=""></iframe>
